Changed exports, fixed extra space which appeared when the children changed

--- a/frontend/src/components/panel-group/styles/panel-group.scss
+++ b/frontend/src/components/panel-group/styles/panel-group.scss
@@ -1,34 +1,38 @@
 .panel-group {
-  position: relative;
-  width: 100%;
   height: 100%;
+  overflow: hidden;
+  position: relative;
+  white-space: nowrap;
+  width: 100%;
 }
 
 .panel {
   position: relative;
   display: inline-block;
   height: 100%;
+  white-space: normal;
 }
 
 .panel-drag {
   $w: $u3;
-  position: absolute;
-  left: $w / -2;
-  top: 0;
   bottom: 0;
+  cursor: col-resize;
+  left: $w / -2;
+  position: absolute;
+  top: 0;
   width: $u3;
   z-index: 5;
-  cursor: col-resize;
+
   &:focus {
     outline: none;
   }
 }
 
 .panel-drag_thumb {
-  position: absolute;
-  left: $u3 + ($u3/-2);
-  top: 0;
-  bottom: 0;
   background: $grey-light;
+  bottom: 0;
+  left: $u3 + ($u3/-2);
+  position: absolute;
+  top: 0;
   width: 2px;
 }
